# Pomodoro

./: CHANGELOG.md  README.md  dev-spec.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
scripts/: build-multi.sh  check-version.sh  release.sh  sync-version.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts
