[package]
name = "pomodoro"
version = "0.5.0"
description = "Task-driven local pomodoro workbench"
authors = ["Codex"]
edition = "2021"

[lib]
name = "pomodoro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
uuid = { version = "1", features = ["serde", "v4"] }
